tests/ui/deprecation/issue-84637-deprecated-associated-function.stderr
error: use of deprecated method `core::str::<impl str>::trim_left`: superseded by `trim_start`
  --> $DIR/issue-84637-deprecated-associated-function.rs:6:21
   |
LL |     let _foo = str::trim_left("   aoeu");
   |                     ^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/issue-84637-deprecated-associated-function.rs:3:9
   |
LL | #![deny(deprecated)]
   |         ^^^^^^^^^^
help: replace the use of the deprecated method
   |
LL |     let _foo = str::trim_start("   aoeu");
   |                     ~~~~~~~~~~

error: use of deprecated method `core::str::<impl str>::trim_left`: superseded by `trim_start`
  --> $DIR/issue-84637-deprecated-associated-function.rs:8:26
   |
LL |     let _bar = "   aoeu".trim_left();
   |                          ^^^^^^^^^
   |
help: replace the use of the deprecated method
   |
LL |     let _bar = "   aoeu".trim_start();
   |                          ~~~~~~~~~~

error: aborting due to 2 previous errors

